improved section on empirical example

--- a/writing/manuscript.Rmd
+++ b/writing/manuscript.Rmd
@@ -350,11 +350,13 @@ Predicting movement using stochastic models may seem less straightforward and mo
 
 \noindent As discussed in the previous section, the first step to modeling $H$ is to choose an appropriate family of distributions. Since $H$ is strictly positive and continuous, a Gamma family seems the most appropriate among the distributions currently offered by the `mgcv` package [@wood_generalized_2017], but the Tweedie family would also be appropriate if the variance does not scale with the squared mean.
 
-As with the simulated effects of $\mu(t)$ and $\sigma^2(t)$ on $H$ (fig. \@ref(fig:5-5-reg)), a location-scale Gamma model is likely required. If there is not sufficient data to fit a location-scale model (which is not the case here), a simple Gamma model may be sufficient, but we suggest selecting the best family of distributions using an information criterion such as the Akaike Information Criterion [@akaike_new_1974]. Due to potential correlation between $\e(R)$ and $\var(R)$ in a small and autocorrelated sample, the relationship between $R$ and $H$ should be modeled carefully and with parsimony. To appropriately constrain the shape of the effects of $\e(R)$ and $\var(R)$, we suggest using a GLM or a shape-constrained GAM (as long as the wiggliness of each term is chosen carefully). Here, we model the effects of $\e(R)$ and $\var(R)$ on $H$ using a shape-constrained GAM with via the `scam` package [@pya_scam_2022]. Additional information on the model can be found in Appendix 3.
+As with the simulated effects of $\mu(t)$ and $\sigma^2(t)$ on $H$ (fig. \@ref(fig:5-5-reg)), a location-scale Gamma model is likely required. If there is not sufficient data to fit a location-scale model (which is not the case here), a simple Gamma model may be sufficient, but we suggest selecting the best family of distributions using an information criterion such as the Akaike Information Criterion [@akaike_new_1974]. Due to potential correlation between $\e(R)$ and $\var(R)$ in a small and autocorrelated sample, the relationship between $R$ and $H$ should be modeled carefully and with parsimony. Below, we present an empirical example using GPS tracking data from a lowland tapir (*Tapirus terrestris*) and satellite-derived NDVI. Additional information can be found in Appendix 3.
 
 ### The effects of $\e(R)$ and $\var(R)$ on a lowland tapir's space-use requirements
 
-\noindent Fig. \@ref(fig:tapir-mw) illustrates  the tapir's response to changes in $\e(R)$ and $\var(R)$. Panels **a** and **b** show the changes in mean and variance in NDVI, respectively, during the tracking period. Panel **c** shows the changes in the tapir's space use over time. Note how the home-range size is larger during periods of lower NDVI (e.g., August 2017) and smallest during periods with high NDVI (January 2018). In contrast, when resources are scarce and highly unpredictable (August 2018), the tapir uses up to 5 times more space than when resources are abundant and predictable (January 2018). Finally, panels **d** and **e** show the estimated (partial) effects of $\mu(t)$ and $\sigma^2(t)$ on the tapir's space use. Again, the estimated effects of $\e(R)$ and $\var(R)$ follow the simple relationships we hypothesized (figs. \@ref(fig:mu-hyp) and \@ref(fig:s2-hyp)) and supported with the simulated responses (fig. \@ref(fig:5-5-reg)). Thus, while the time series shown in panel **c** may appear complicated, the tapir's response can be well described by two simple functions. However, note that since $\mu(t)$ and $\sigma^2(t)$ are highly corrleated, modeling the tapir's space use as a function of resource abundance alone would result in an excessively strong estimated effect. By including the effect of $\sigma^2(t)$ in the model, we show that the tapir responds to both resource abundance and stochasticity. When resources are relatively low (but still high: $\mu(t) \in (0.65, 0.75)$), the tapir does not respond to changes in resources abundance. However, duing periods of peak greenness ($\mu \approx 0.85$), its weekly home range is approximately halved. In contrast, the tapir adapts much more strongly to changes in $\sigma^2(t)$ by increasing its home range sixfold. This example demonstrates that (1) even animals in resource-rich regions such as the Brazilian Cerrado adapt their behavior in periods of high stochasticity and that (2) the effects of stochasticity in $R$ should also be considered when estimating the effects of average $R$ on animals' space use.
+\noindent Fig. \@ref(fig:tapir-mw) illustrates how a tapir in the Brazilian Cerrado [data from @medici_movement_2022] adapts its spatial needs to changes in $\e(R)$ and $\var(R)$. Panels **a** and **b** show the changes in seven-day average mean and variance in NDVI, respectively, experienced by the tapir during the tracking period. Panel **c** shows the changes in the tapir's 7-day home range over time. Note how the tapir uses more space during periods of lower NDVI (e.g., August 2017) and less space during periods with high NDVI (January 2018). Additionally, when resources are scarce and highly unpredictable (August 2018), the tapir uses up to 5 times more space than when resources are abundant and predictable (e.g., January 2018). Finally, panels **d** and **e** show the estimated (marginal) effects of $\mu(t)$ and $\sigma^2(t)$ on the tapir's space use. Simce $\mu(t)$ and $\sigma^2(t)$ are strongly correlated (panel **f**) and (spatio)temporally autocorrelated (panels **a** and **b**), the effects of $R$ on $H$ should be modeled carefully. To avoid over-fitting the model, we constrain the smooth effects of $\mu(t)$ and $\sigma^2(t)$ using a shape-constrained additive models (SCAM) with monotone deceasing and increasing P-splines for $\mu(t)$ and $\sigma^2(t)$, respectively.
+
+Modeling the tapir's space use as a function of resource abundance alone would result in an excessively strong estimated effect and an worse model fit ($\Delta\text{AIC} \approx 87$). By including the effect of $\sigma^2(t)$ in the model along with that of $\mu(t)$, we show that the tapir responds to both resource abundance and stochasticity. While the tracking period may be too short to see the effects of $\e(R)$ clearly, it should also be noted that the Cerrado is relatively rich in vegetation throughout the entire year (fig. \@ref(fig:tapir-mw)a), and thus the tapir does not experience resource scarcity during the tracking period. Consequently, this example demonstrates two points central to this paper. Firstly, even animals in resource-rich regions such as the Brazilian Cerrado adapt their behavior in response to reosurce stochasticity. Secondly, trends in mean resources alone are not sufficient to explain the tapir's space use, and the stochasticity in $R$ is an important driver of the tapir's movement.
 
 ```{r tapir-mw, fig.cap="Seven-day home-range size of a lowland tapir (\\emph{Tapirus terrestris}) in response to changes in mean and variance in resources. (a.) Trends in resource abundance over time, $\\mu(t)$, esimated as the average mean NDVI at the locations visited by the tapir during a seven-day period. (b.) Varince in resources over time, $\\sigma^2(t)$, esimated as the average variance in NDVI at the locations visited by the tapir during a seven-day period. (c.) Estimated seven-day home range based on the 95\\% utilization quantiles. (d., e.) Estimated marginal effects of $\\mu(t)$ and $\\sigma^2(t)$ on home-range size. The model accounted for the marginal effects of $\\mu(t)$ and $\\sigma^2(t)$ and their interaction on mean space-use requirements and the variance around them. (f.) The effect of $\\mu(t)$ does not follow the data closely because $\\e(R)$ and $\\var(R)$ are highly correlated. Consequently, while estimating the effects of $\\e(R)$ and $\\var(R)$ via separate models would allow result in a closer fit, the estimated effects would be inappropriate because they do not disentangle the effects of $\\e(R)$ and $\\var(R)$. See Appendix 3 for additional information. The tapir movement data corresponds to the individual named ``Anna\" from the Cerrado sample of Medici $et~al.$ (2022).", out.width='100%'}
 knitr::include_graphics('../figures/tapir-example-with-data.png')
